# multi-controller-app

./: .editorconfig  .editorconfig.csharp  .env.example  .env.template  .eslintignore  .gitignore  .lintstagedrc.json  .mcp.json  .mcp.json.backup-clearthought  .mcp.json.backup-forensic-audit  .npmrc  .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  CLAUDE.md.backup-20250902-140829  CLAUDE.md.backup-20250904-014714  CONTRIBUTING.md  Cargo.toml  Directory.Build.props  Dockerfile  FileScopeMCP-tree.json  LICENSE  MONOREPO.md  README.md  benchmark-report-20250825-003627.json  benchmark-report-20250825-003834.json  demo-telemetry.js  docker-compose.monitoring.yml  docker-compose.yml  eslint.config.mjs  jest.config.js  list_ports.rs  nodemon.json  package-lock.json  package.json  pnpm-workspace.yaml  schema_test.rs  test-coverage-report.md  test-performance.ps1  (+4 more)
.cipher/: MEMORY_PROTOCOL.md  RESTART_CLEAR_THOUGHT_1.5.md  RESTART_REQUIRED.md  RESTART_REQUIRED_NEW.md  aggregation-report.md  cipher-test.yml  cipher.yml  cipher.yml.backup-clearthought  test-aggregation.js  test-memory.js  test-system-prompt.js  verify-fix.md
.claude/: HOOKS_MINIMAL.md  PROJECT_SLASH_COMMANDS.md  agent-selection-context-system.md  command-integration-schema.md  phase1a-implementation-summary.md  phase1b-complete-integration-summary.md  phase1b-context-aware-selection.md  phase1b-enhancement-progress.md  phase1b-implementation-status.md  phase1b-universal-integration-completion.md  settings.json  settings.json.backup-20250902-231942  settings.local.json  squirrel-log.jsonl  testing-config.md  tier1-command-assignments.md  tool-chain-templates.md  universal-memory-integration.md
.claude/agents/: agent-expert.md  cargo-build-engineer.md  command-processor.md  docs-scribe.md  driver-engineer.md  egui-performance-optimizer.md  excellence-enforcer.md  handshake-protocol-engineer.md  logging-integrator.md  mcp-forensics-auditor.md  mcp-toolsmith.md  memory-steward.md  mock-test-orchestrator.md  packaging-release.md  performance-optimizer.md  performance-profiler.md  profile-manager.md  research-librarian.md  ring-buffer-architect.md  rust-async-specialist.md  rust-performance-monitor.md  rust-safety-coordinator.md  rust-security-coordinator.md  safety-guardian.md  scripting-architect.md  serial-comm-specialist.md  serial-hardware-specialist.md  task-checker.md  task-executor.md  task-orchestrator.md  telemetry-collector.md  test-runner.md  transport-engineer.md  transport-lifecycle-guardian.md  ui-controls-architect.md  ui-telemetry-analyst.md  visualization-engineer.md
.claude/audit/: agent-integration-audit-report.md
.claude/commands/: add-performance-monitoring.md  all-tools.md  architecture-scenario-explorer.md  cipher-memory.md  clean-branches.md  code-permutation-tester.md  code-review.md  create-architecture-documentation.md  create-onboarding-guide.md  decision-tree-explorer.md  design-database-schema.md  directory-deep-dive.md  docs-maintenance.md  e2e-setup.md  generate-test-cases.md  generate-tests.md  implement-caching-strategy.md  initref.md  interactive-documentation.md  optimize-bundle-size.md  project-health-check.md  project_reflection.md  setup-comprehensive-testing.md  setup-development-environment.md  setup-formatting.md  setup-linting.md  setup-monitoring-observability.md  setup-monorepo.md  setup-visual-testing.md  simulation-calibrator.md  system-dynamics-modeler.md  (+10 more)
.clear-thought/: CLAUDE.md
.context7/: CLAUDE.md
.cursor/: mcp.json
.desktop-commander/: CLAUDE.md
.filescope/: CLAUDE.md
.memory/: CLAUDE.md
.perplexity-ask/: CLAUDE.md
.ruler/: AGENTS.md  ruler.toml
.taskmaster/: config.json  github-map.json  state.json
.time-server/: CLAUDE.md
.vibe-tree/: config.json
docs/: .markdownlint.json  BUILD_TROUBLESHOOTING.md  CC-Commands.txt  CCPM_INTEGRATION.md  CI_CD_COVERAGE.md  CLAUDE_COMMANDS_RESTORED.md  DUAL_MODE_ARCHITECTURE.md  GITHUB_SYNC_GUIDE.md  LOOPBACK_TESTING.md  Multi-Controller App Project Status.md  PERFORMANCE_VALIDATION.md  SCRIPTING_GUIDE.md  SSH_KEY_SETUP.md  STYLE_GUIDE.md  TASK_17_COMPLETION.md  TELEMETRY_DOCUMENTATION.md  TEST_COVERAGE_MATRIX.md  TEST_DOCUMENTATION.md  TEST_RESULTS_TASK_10.md  TYPESCRIPT_PATH_ALIASES.md  TYPESCRIPT_SSH_TYPE_FIX.md  agent-audit-report.md  agent-improvement-templates.md  agent-verification-report.md  arduino-driver-guide.md  risks.md  telemetry-implementation.md
drivers/: manifest.template.json
examples/: arduino_control.rs  handshake_schema_test.rs  telemetry_parser_demo.rs  telemetry_test.rs
ref/: AGENTS.md  ARCHITECTURE.md  CIPHER_INTEGRATION.md  CLAUDE_OPTIMIZATION.md  CODING_STANDARDS.md  COGNITIVE_INTEGRATION.md  DEVELOPMENT_SETUP.md  GIT_WORKFLOW.md  MCP_SERVERS.md  MEMORY.md  MEMORY_AUTOMATION.md  PROJECT_OVERVIEW.md  TASK_MANAGEMENT.md
rust/: Cargo.toml
rust/core/: Cargo.toml
rust/core/src/: driver.rs  error.rs  lib.rs  session.rs  transport.rs
rust/drivers/arduino/: Cargo.toml
rust/drivers/arduino/src/: lib.rs
rust/tests/: Cargo.toml
rust/tests/src/: basic_compilation.rs  device_demo.rs  integration_tests.rs
rust/transports/serial/: Cargo.toml
rust/transports/serial/src/: lib.rs  simple.rs
scripts/: Search-CipherMemory.ps1  build-helper.bat  check-mcp-health.ps1  claude-commands.ps1  compliance-tracker.ps1  install-memory-hooks.ps1  mcp-health-check.ps1  mcp-watchdog.ps1  measure-coverage.ps1  memory-enforcement.ps1  memory-hooks.ps1  migrate-to-monorepo.ps1  pre-task-research.ps1  restore-claude-commands.ps1  run-loopback-tests.ps1  scaffold-repository.ps1  setup-windows.ps1  shell-context-detector.ps1  task-master-wrapper.ps1  tm.bat  update-coverage-matrix.ps1  vibe-tree-launch.ps1
src/: lib.rs  main.rs
tests/: README.md  arduino_driver_tests.rs  coverage-dashboard.html  coverage-matrix-report.md  coverage-matrix.json  loopback_tests.rs  mod.rs  performance_test.rs  performance_tests.rs  profile_test.rs  simple_loopback_test.rs  telemetry_chart_integration_test.rs  telemetry_parser_test.rs  telemetry_ring_buffer_tests.rs  test-cases.yaml  ui_controls_test.rs
(+435 files in other folders)
