[workspace]
members = [
    "core",
    "transports/serial",
    "drivers/arduino",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
# Serial communication
serialport = "4.5"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Async traits
async-trait = "0.1"
# Unique IDs
uuid = { version = "1.10", features = ["v4", "serde"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Testing
mockall = "0.13"

[profile.release]
# Optimize for performance and size
lto = true
codegen-units = 1
panic = "abort"
strip = true