[package]
name = "multi-controller-arduino"
version = "1.0.0"
edition = "2021"
description = "Arduino device driver for Multi-Controller App"

[dependencies]
multi-controller-core = { path = "../../core" }
multi-controller-serial = { path = "../../transports/serial" }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = "0.4"